src/test/deca/syntax/valid/not_provided/include_bloc_separe.deca
// Description:
//    Include un bloc en deux parties, chacune dans un fichier .deach separe
//
//    [Lexicographie], Inclusion de fichier, p55
//    INCLUDE = '#include' (' ')* '"' FILENAME '"'
//
// Resultats:
//     Hello World
//
// Historique:
//    cree le 05/01/2022

#include "include_bloc_separe1.decah"
#include "include_bloc_separe2.decah"