src/test/deca/syntax/invalid/include_fichier_invalide.deca
// Description:
//    Include un fichier existant, avec un nom ne respectant pas les règles d'include de Deca.
//
//    [Lexicographie], Inclusion de fichier, p55F
//    FILENAME = (LETTER + DIGIT + '.' + '-' + '_')+
//
// Resultats:
//     Erreur de lexeur 13:35, $ non reconnu
//
// Historique:
//    cree le 05/01/2022

#include "include_fichier_invalide$.decah"